# NextCalc

./: .env  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/configs/: general.py
app/core/configs/: general.py
app/exceptions/: calculate_exceptions.py
app/routers/: __init__.py  calculate.py  operations.py
app/schemas/: operation_schema.py
app/services/: calculate_service.py  operation_service.py
docker_compose/: app.yaml
