[tool.poetry]
name = "NextCalc"
version = "0.1.0"
description = ""
authors = ["Aerox <saipullaev.f@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.4"}
uvicorn = "^0.32.0"
sympy = "^1.13.3"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
